--- a/metadata.yaml
+++ b/metadata.yaml
@@ -41,6 +41,7 @@ subjects:
 - !lcc 'B'
 - !lcsh 'Philosophy, Hindu'
 - !lcsh 'Philosophy, Indic'
+- GITenberg
 title: "The Sarva-Darsana-Samgraha\r\nOr, Review of the Different Systems of Hindu\
   \ Philosophy"
 url: http://www.gutenberg.org/ebooks/34125
